XML deserializatio speed-up